BREAKING CHANGES: Set correct grid narrow span on tablet, should spread 10 columns instead of 8

--- a/packages/web/src/scss/components/Grid/_Grid.scss
+++ b/packages/web/src/scss/components/Grid/_Grid.scss
@@ -21,7 +21,7 @@
     grid-column: span 12;
 
     @include breakpoint.up(map.get(theme.$breakpoints, tablet)) {
-        grid-column: 3 / span 8;
+        grid-column: 2 / span 10;
     }
 
     @include breakpoint.up(map.get(theme.$breakpoints, desktop)) {
